--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.Paper_slide"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ui.signin.Signin"
+            android:name=".ui.ocr.Ocr"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,6 +27,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.signin.Signin"
+            android:exported="true" />
 
         <activity
             android:name=".ui.uploadsignature.UploadSinature"
@@ -36,16 +39,13 @@
             android:exported="false" />
         <activity
             android:name=".ui.signin.profile"
-            android:exported="true"/>
-
+            android:exported="true" />
         <activity
             android:name=".ui.pastelink.PasteLink"
             android:exported="false" />
         <activity
             android:name=".ui.signup.SignUpActivity"
-            android:exported="true"/>
-
-
+            android:exported="true" />
         <activity
             android:name=".ui.resetpassword.ResetPassword"
             android:exported="true" />
