summary Api implementation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,10 @@
         <activity
             android:name=".ui.signin.Signin"
             android:exported="true" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+
+
+
         </activity>
 
 
@@ -58,7 +57,14 @@
             android:exported="false" />
         <activity
             android:name=".ui.summarize.Summarize"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
         <activity
             android:name=".ui.preview.preview"
             android:exported="true" />
@@ -88,6 +94,9 @@
         <activity
             android:name=".ui.signin.Login"
             android:exported="true" >
+
+
+
 
         </activity>
         <activity
