--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,15 +19,20 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.notes.NotesActivity"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ui.ocr.Ocr"
             android:exported="true" />
-
-
         <activity
             android:name=".ui.signin.Signin"
-            android:exported="true"/>
-
-
+            android:exported="true" />
         <activity
             android:name=".ui.uploadsignature.UploadSinature"
             android:exported="false" />
@@ -48,23 +53,17 @@
             android:exported="true" />
         <activity
             android:name=".ui.result.Result"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".ui.summarize.Summarize"
             android:exported="true" />
-
         <activity
             android:name=".ui.preview.preview"
             android:exported="true" />
         <activity
             android:name=".ui.textscannertranslate.Text_Scanner_Translate"
             android:exported="true" />
+
         <activity
             android:name=".ui.scandocument.ScanDocument"
             android:exported="false" />
@@ -77,8 +76,6 @@
         <activity
             android:name=".ui.home.Home"
             android:exported="true" />
-
-
         <activity
             android:name=".ui.otp.Otp"
             android:exported="false" />
