preview MVVM and Data Binding

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,6 @@
             android:name=".ui.signin.Signin"
             android:exported="true" >
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
 
         </activity>
@@ -53,6 +48,8 @@
             android:exported="true" >
 
 
+
+
         </activity>
 
 
@@ -61,7 +58,10 @@
             android:exported="true" />
         <activity
             android:name=".ui.result.Result"
-            android:exported="false" />
+            android:exported="true" >
+
+
+        </activity>
         <activity
             android:name=".ui.summarize.Summarize"
             android:exported="true" >
@@ -70,7 +70,14 @@
         </activity>
         <activity
             android:name=".ui.preview.preview"
-            android:exported="true" />
+            android:exported="true" >
+
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
         <activity
             android:name=".ui.textscannertranslate.Text_Scanner_Translate"
             android:exported="true" />
