--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,22 +11,21 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Paper_slide"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ui.notes.NotesActivity"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:name=".ui.createasignature.CreateSignatureActivity"
+            android:exported="true" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity
+            android:name=".ui.notes.NotesActivity"
+            android:exported="true" />
+
         <activity
             android:name=".ui.ocr.Ocr"
             android:exported="true" />
@@ -35,9 +34,6 @@
             android:exported="true" />
         <activity
             android:name=".ui.uploadsignature.UploadSinature"
-            android:exported="false" />
-        <activity
-            android:name=".ui.createasignature.CreateASignature"
             android:exported="false" />
         <activity
             android:name=".ui.signin.profile"
@@ -63,7 +59,6 @@
         <activity
             android:name=".ui.textscannertranslate.Text_Scanner_Translate"
             android:exported="true" />
-
         <activity
             android:name=".ui.scandocument.ScanDocument"
             android:exported="false" />
@@ -75,7 +70,13 @@
             android:exported="false" />
         <activity
             android:name=".ui.home.Home"
-            android:exported="true" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.otp.Otp"
             android:exported="false" />
