--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,75 +11,53 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.Paper_slide"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.createasignature.CreateSignatureActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".ui.notes.NotesActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".ui.ocr.Ocr"
+            android:exported="true" />
+        <activity
             android:name=".ui.signin.Signin"
-            android:exported="true" >
-
-
-
-        </activity>
-
-
+            android:exported="true" />
         <activity
             android:name=".ui.uploadsignature.UploadSinature"
             android:exported="false" />
         <activity
-            android:name=".ui.createasignature.CreateASignature"
-            android:exported="false" />
-        <activity
             android:name=".ui.signin.profile"
-            android:exported="true"/>
-
+            android:exported="true" />
         <activity
             android:name=".ui.pastelink.PasteLink"
             android:exported="false" />
         <activity
             android:name=".ui.signup.SignUpActivity"
-            android:exported="true"/>
-        <activity
-            android:name=".ui.ocr.Ocr"
-            android:exported="true" >
-
-
-
-
-        </activity>
-
-
+            android:exported="true" />
         <activity
             android:name=".ui.resetpassword.ResetPassword"
             android:exported="true" />
         <activity
             android:name=".ui.result.Result"
-            android:exported="true" >
-
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".ui.summarize.Summarize"
-            android:exported="true" >
-
-
-        </activity>
+            android:exported="true" />
         <activity
-            android:name=".ui.preview.preview"
-            android:exported="true" >
-
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-        </activity>
+            android:name=".ui.preview.Preview"
+            android:exported="true" />
         <activity
-            android:name=".ui.textscannertranslate.Text_Scanner_Translate"
+            android:name=".ui.textTranslate.TextTranslateActivity"
             android:exported="true" />
         <activity
             android:name=".ui.scandocument.ScanDocument"
@@ -93,7 +71,11 @@
         <activity
             android:name=".ui.home.Home"
             android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".ui.otp.Otp"
@@ -103,12 +85,7 @@
             android:exported="true" />
         <activity
             android:name=".ui.signin.Login"
-            android:exported="true" >
-
-
-
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".ui.splash.Splash"
             android:exported="true" />
