--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,20 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.texteditor.TextEditor"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ui.createasignature.CreateSignatureActivity"
             android:exported="true" />
-
         <activity
             android:name=".ui.notes.NotesActivity"
             android:exported="true" />
-
         <activity
             android:name=".ui.ocr.Ocr"
             android:exported="true" />
@@ -70,13 +77,8 @@
             android:exported="false" />
         <activity
             android:name=".ui.home.Home"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="true" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".ui.otp.Otp"
             android:exported="false" />
