--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,14 @@
             android:exported="true" />
         <activity
             android:name=".ui.preview.Preview"
-            android:exported="true" />
+            android:exported="true" >
+        <!--<intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+
+        <category android:name="android.intent.category.LAUNCHER" />
+    </intent-filter>-->
+        </activity>
+
         <activity
             android:name=".ui.textTranslate.TextTranslateActivity"
             android:exported="true" />
@@ -71,11 +78,7 @@
         <activity
             android:name=".ui.home.Home"
             android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ui.otp.Otp"
@@ -88,7 +91,13 @@
             android:exported="true" />
         <activity
             android:name=".ui.splash.Splash"
-            android:exported="true" />
+            android:exported="true" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
