--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:name=".ui.signin.Signin"
             android:exported="true" />
         <activity
-            android:name=".ui.uploadsignature.UploadSinature"
+            android:name=".ui.uploadSignature.UploadSinature"
             android:exported="false" />
         <activity
             android:name=".ui.signin.profile"
