take signate from gallery

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <uses-permission
         android:name="com.google.android.gms.permission.AD_ID"
         tools:node="remove" />
@@ -39,9 +42,17 @@
         <activity
             android:name=".ui.signin.Signin"
             android:exported="true" />
+
         <activity
-            android:name=".ui.uploadSignature.UploadSinature"
-            android:exported="false" />
+            android:name=".ui.uploadSignature.UploadSignature"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".ui.signin.profile"
             android:exported="true" />
@@ -100,11 +111,11 @@
         <activity
             android:name=".ui.splash.Splash"
             android:exported="true" >
-        <intent-filter>
+   <!--     <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+        </intent-filter>-->
         </activity>
 
         <meta-data
@@ -113,6 +124,16 @@
         <meta-data
             android:name="com.google.android.gms.auth.api.signin.CLIENT_ID"
             android:value="990156368364-heapt9j35b2cu3kgeh89u1jmd5ol6r95.apps.googleusercontent.com" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.paper_slide.fileprovider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
