--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,14 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ui.ppt.PresentationActivityView"
-            android:exported="false" />
+            android:name=".ui.ppt.PPTThemesActivity"
+            android:exported="true" >
+             <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/AppTheme" />
@@ -115,7 +121,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.home.Home"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ui.otp.Otp"
             android:exported="false" />
@@ -128,11 +134,11 @@
         <activity
             android:name=".ui.splash.Splash"
             android:exported="true">
-            <intent-filter>
+           <!-- <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
 
         <meta-data
